--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         
         <section class="section team">
             <div class="team__header">
-                <h2 class="team__heading section__heading" id="about">
+                <h2 class="team__heading section__heading">
                     Meet our team
                 </h2>
                 <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
